# OnlineCinema/docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": ":8080",
     "paths": {
         "/CreateActor": {
             "post": {
@@ -39,13 +39,40 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/storage.OutActor"
-                            }
+                            "$ref": "#/definitions/storage.Actor"
                         }
                     }
                 }
+            }
+        },
+        "/CreateFilm": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "добавляет информацию о Фильме",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "films"
+                ],
+                "summary": "Добавить фильм",
+                "operationId": "CreateFilm",
+                "parameters": [
+                    {
+                        "description": "Информация о фильме",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/storage.Film"
+                        }
+                    }
+                ],
+                "responses": {}
             }
         },
         "/CreateUser": {
@@ -107,15 +134,39 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/storage.OutActor"
-                            }
-                        }
+                        "description": "OK"
                     }
                 }
+            }
+        },
+        "/DeleteFilm": {
+            "delete": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "удаляет информацию о Фильме",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "films"
+                ],
+                "summary": "удалить фильм",
+                "operationId": "DeleteFilm",
+                "parameters": [
+                    {
+                        "description": "Информация о фильме",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/storage.Film"
+                        }
+                    }
+                ],
+                "responses": {}
             }
         },
         "/DeleteUser": {
@@ -168,10 +219,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/storage.OutActor"
-                            }
+                            "$ref": "#/definitions/storage.OutActor"
                         }
                     }
                 }
@@ -195,9 +243,46 @@
                 "operationId": "GetAllUsers",
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/users.User"
+                        }
+                    }
+                }
+            }
+        },
+        "/GetFilms": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Получает информацию о фильмах",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "films"
+                ],
+                "summary": "Показать фильмы",
+                "operationId": "GetFilms",
+                "parameters": [
+                    {
+                        "description": "условия выборки",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/storage.GetFilmsParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/storage.OutFilm"
                         }
                     }
                 }
@@ -234,13 +319,40 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/storage.OutActor"
-                            }
+                            "$ref": "#/definitions/storage.Actor"
                         }
                     }
                 }
+            }
+        },
+        "/UpdateFilm": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "обновляет информацию о Фильме",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "films"
+                ],
+                "summary": "Обновить фильм",
+                "operationId": "UpdateFilm",
+                "parameters": [
+                    {
+                        "description": "Информация о фильме",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/storage.Film"
+                        }
+                    }
+                ],
+                "responses": {}
             }
         }
     },
@@ -306,6 +418,23 @@
                 }
             }
         },
+        "storage.GetFilmsParam": {
+            "type": "object",
+            "properties": {
+                "actorname": {
+                    "type": "string"
+                },
+                "filmname": {
+                    "type": "string"
+                },
+                "sortname": {
+                    "type": "string"
+                },
+                "sorttype": {
+                    "type": "string"
+                }
+            }
+        },
         "storage.OutActor": {
             "type": "object",
             "properties": {
@@ -325,6 +454,32 @@
                     "type": "integer"
                 },
                 "sex": {
+                    "type": "string"
+                }
+            }
+        },
+        "storage.OutFilm": {
+            "type": "object",
+            "properties": {
+                "actors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/storage.Actor"
+                    }
+                },
+                "description": {
+                    "type": "string"
+                },
+                "filmname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "rating": {
+                    "type": "string"
+                },
+                "releasedate": {
                     "type": "string"
                 }
             }
