# OnlineCinema/main.go
@@ -4,20 +4,19 @@ import (
 	_ "github.com/lib/pq"
 	"github.com/swaggo/http-swagger"
 	"net/http"
-	"techno-test_Films/OnlineCinema/config"
-	_ "techno-test_Films/OnlineCinema/docs"
-	"techno-test_Films/OnlineCinema/handlers/actor"
-	"techno-test_Films/OnlineCinema/handlers/auth"
-	"techno-test_Films/OnlineCinema/handlers/film"
-	"techno-test_Films/OnlineCinema/handlers/user"
-	slogpretty "techno-test_Films/OnlineCinema/lib"
-	storage2 "techno-test_Films/OnlineCinema/storage"
+	"techno-test_Films/config"
+	"techno-test_Films/handlers/actor"
+	"techno-test_Films/handlers/auth"
+	"techno-test_Films/handlers/film"
+	users "techno-test_Films/handlers/user"
+	slogpretty "techno-test_Films/lib"
+	storage2 "techno-test_Films/storage"
 )
 
 // @title Фильмотека API
 // @version 1.0
 // @description Фильмотека
-// @host localhost:8080
+// @host :8080
 // @securitydefinitions.basic BasicAuth
 // @in header
 // @name Authorization
@@ -46,17 +45,17 @@ func main() {
 	mux := http.NewServeMux()
 	mux.HandleFunc("/", auth.NonPage)
 	mux.HandleFunc("/swagger/*", httpSwagger.Handler(httpSwagger.URL("http://localhost:8080/swagger/doc.json")))
-	mux.HandleFunc("/GetAllUsers", auth.AdminAuth(users.GetAllUsers(db), db))
-	mux.HandleFunc("/CreateUser", auth.AdminAuth(users.CreateUser(db), db))
-	mux.HandleFunc("/DeleteUser", auth.AdminAuth(users.DeleteUser(db), db))
-	mux.HandleFunc("/CreateActor", auth.AdminAuth(actor.CreateActor(db), db))
-	mux.HandleFunc("/UpdateActor", auth.AdminAuth(actor.UpdateActor(db), db))
-	mux.HandleFunc("/CreateFilm", auth.AdminAuth(film.GetFilms(db), db))
-	mux.HandleFunc("/UpdateFilm", auth.AdminAuth(film.UpdateFilm(db), db))
-	mux.HandleFunc("/GetActors", auth.UserAuth(actor.GetActors(db), db))
-	mux.HandleFunc("/DeleteFilm", auth.AdminAuth(film.DeleteFilm(db), db))
-	mux.HandleFunc("/DeleteActor", auth.AdminAuth(actor.DeleteActor(db), db))
-	mux.HandleFunc("/GetFilms", auth.UserAuth(film.GetFilms(db), db))
+	mux.HandleFunc("/GetAllUsers", auth.AdminAuth(users.GetAllUsers(db, logger), db))
+	mux.HandleFunc("/CreateUser", auth.AdminAuth(users.CreateUser(db, logger), db))
+	mux.HandleFunc("/DeleteUser", auth.AdminAuth(users.DeleteUser(db, logger), db))
+	mux.HandleFunc("/CreateActor", auth.AdminAuth(actor.CreateActor(db, logger), db))
+	mux.HandleFunc("/UpdateActor", auth.AdminAuth(actor.UpdateActor(db, logger), db))
+	mux.HandleFunc("/CreateFilm", auth.AdminAuth(film.CreateFilm(db, logger), db))
+	mux.HandleFunc("/UpdateFilm", auth.AdminAuth(film.UpdateFilm(db, logger), db))
+	mux.HandleFunc("/GetActors", auth.UserAuth(actor.GetActors(db, logger), db))
+	mux.HandleFunc("/DeleteFilm", auth.AdminAuth(film.DeleteFilm(db, logger), db))
+	mux.HandleFunc("/DeleteActor", auth.AdminAuth(actor.DeleteActor(db, logger), db))
+	mux.HandleFunc("/GetFilms", auth.UserAuth(film.GetFilms(db, logger), db))
 	//запуск сервера
 	server := &http.Server{
 		Addr:         cfg.HttpServer.Address,
